Test/refman/Example-TP.dfy.expect
Example-TP.dfyp(10,10): Error: type parameter (T) passed to type ResultN must support no references (got C)
Example-TP.dfyp(12,10): Error: type parameter (T) passed to type ResultN must support no references (got array<int>)
2 resolution/type errors detected in Example-TP.dfyp
